--- a/spring-credhub-demo/build.gradle
+++ b/spring-credhub-demo/build.gradle
@@ -18,13 +18,13 @@ description = 'Spring CredHub Demo'
 
 buildscript {
 	ext {
-		springBootVersion = "1.5.8.RELEASE"
+		springBootVersion = "2.0.6.RELEASE"
 	}
 
 	dependencies {
-		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
-		classpath 'io.spring.gradle:spring-io-plugin:0.0.7.RELEASE'
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+		classpath('io.spring.gradle:propdeps-plugin:0.0.10.RELEASE')
+		classpath('io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE')
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 
 	repositories {
@@ -41,16 +41,18 @@ apply plugin: 'propdeps'
 apply plugin: 'propdeps-maven'
 apply plugin: 'propdeps-idea'
 apply plugin: 'propdeps-eclipse'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 
 dependencies {
-	compile("org.springframework.credhub:spring-credhub-starter:1.1.0.BUILD-SNAPSHOT")
-
-	compile("org.springframework.boot:spring-boot-starter-web")
+	compile("org.springframework.boot:spring-boot-starter-webflux")
 	compile("org.springframework.boot:spring-boot-starter-actuator")
+
+	compile("org.springframework.credhub:spring-credhub-starter:2.0.0.BUILD-SNAPSHOT")
 }
 
 repositories {
-	maven { url "https://repo.spring.io/libs-snapshot" }
 	mavenCentral()
+	maven { url "https://repo.spring.io/libs-snapshot-local" }
+	maven { url "https://repo.spring.io/libs-milestone-local" }
 }
